--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,11 @@
     "next": "^13.2.4",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.60.0"
   },
   "devDependencies": {
-    "webpack": "4"
+    "webpack": "^5.76.3"
   },
   "scripts": {
     "start": "next"
